--- a/src/main/resources/templates/admin/category/create.html
+++ b/src/main/resources/templates/admin/category/create.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{admin/fragments/_layout}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<form th:action="@{/admin/category/create}" th:object="${category}" method="post">
-    <label>Kategori Adı </label>
-    <input type="text" id="categoryName" placeholder="Kategori Adı" th:field="*{CategoryName}" class="form-control"/><br/>
-    <span th:if="${#fields.hasErrors('categoryName')}" th:errors="*{categoryName}">Category Error</span>
+<div class="container-fluid" layout:fragment="content">
+    <h1 class="h3 mb-2 text-gray-800">Kategori Ekle</h1>
+    <div class="row">
+        <div class="col-lg-12">
+            <form th:action="@{/admin/category/create}" th:object="${category}" method="post">
+                <label>Kategori Adı </label>
+                <input type="text" id="categoryName" placeholder="Kategori Adı" th:field="*{CategoryName}"
+                       class="form-control"/><br/>
+                <span th:if="${#fields.hasErrors('categoryName')}" th:errors="*{categoryName}">Category Error</span>
 
-    <label>Kategori Açıklaması </label>
-    <input type="text" id="description" placeholder="Grup Açıklaması" th:field="*{Description}" class="form-control"/><br/>
-    <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Description Error</span>
+                <label>Kategori Açıklaması </label>
+                <input type="text" id="description" placeholder="Grup Açıklaması" th:field="*{Description}"
+                       class="form-control"/><br/>
+                <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Description Error</span>
 
-    <button type="submit" class="btn btn-primary text-center form-control">Kaydet</button>
-</form>
+                <button type="submit" class="btn btn-primary text-center form-control">Kaydet</button>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
