--- a/src/main/resources/templates/admin/fragments/_layout.html
+++ b/src/main/resources/templates/admin/fragments/_layout.html
@@ -12,10 +12,11 @@
 
     <!-- Custom fonts for this template-->
     <link rel="stylesheet" type="text/css" th:href="@{/admin/vendor/fontawesome-free/css/all.min.css}"/>
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link rel="stylesheet" media="screen" th:href="@{/admin/css/sb-admin-2.min.css}"/>
+    <link rel="stylesheet" media="screen" th:href="@{/admin/css/sb-admin-2.css}"/>
 
 </head>
 
@@ -63,7 +64,8 @@
 </a>
 
 <!-- Logout Modal-->
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
