--- a/src/main/resources/templates/admin/product/index.html
+++ b/src/main/resources/templates/admin/product/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class="container-fluid" layout:fragment="content">
+    <h1 class="h3 mb-2 text-gray-800">Ürünler</h1>
 <div class="row">
     <div class="col-lg-12">
 <table class="table table-striped">
@@ -34,6 +35,7 @@
     </tr>
     </tbody>
 </table>
+
     </div>
 </div>
 </div>
