--- a/src/main/resources/templates/admin/fragments/_layout.html
+++ b/src/main/resources/templates/admin/fragments/_layout.html
@@ -5,10 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>SB Admin 2 - Blank</title>
+    <!--<meta th:name="_csrf" th:content="${_csrf.token}"/>-->
+    <!--<meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>-->
+    <title>StickerDeposu Admin</title>
 
     <!-- Custom fonts for this template-->
     <link rel="stylesheet" type="text/css" th:href="@{/admin/vendor/fontawesome-free/css/all.min.css}"/>
