--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,6 +12,7 @@
     <div class="margin-top20 text-center"><a th:href="@{/login}">Giriş Sayfasına Git</a></div>
 
     <form autocomplete="off" action="#" th:action="@{/register}" th:object="${user}" method="post">
+        <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
 
         <div class="alert alert-dismissible alert-danger" th:if="${#fields.hasErrors('*')}">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
