Cart and CartItem added

--- a/src/main/resources/templates/admin/fragments/_layout.html
+++ b/src/main/resources/templates/admin/fragments/_layout.html
@@ -8,7 +8,8 @@
     <!--<meta th:name="_csrf" th:content="${_csrf.token}"/>-->
     <!--<meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>-->
     <title>StickerDeposu Admin</title>
-
+    <meta th:name="_csrf" th:content="${_csrf.token}"/>
+    <meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>
     <!-- Custom fonts for this template-->
     <link rel="stylesheet" type="text/css" th:href="@{/admin/vendor/fontawesome-free/css/all.min.css}"/>
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
