--- a/src/main/resources/templates/admin/product/create.html
+++ b/src/main/resources/templates/admin/product/create.html
@@ -4,6 +4,7 @@
       layout:decorate="~{admin/fragments/_layout}">
 <head>
     <meta charset="UTF-8">
+
 </head>
 <body>
 <div class="container-fluid" layout:fragment="content">
@@ -22,6 +23,10 @@
     <label>Adet </label>
     <input type="text" id="quantity" placeholder="Ürün Açıklaması" th:field="*{Quantity}" class="form-control"/><br/>
     <span th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}">Description Error</span>
+
+    <label>Fiyat (TL) </label>
+    <input type="text" id="price" placeholder="Ürün Açıklaması" th:field="*{Price}" class="form-control"/><br/>
+    <span th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Description Error</span>
 
     <select th:field="*{CategoryId}" class="form-control">
         <option th:each="cat : ${categories}" th:value="${cat.id}" th:text="${cat.categoryName}"></option>
