Cart sections edited

--- a/src/main/resources/templates/store.html
+++ b/src/main/resources/templates/store.html
@@ -40,7 +40,8 @@
                     <a class="nav-link" href="#">Services</a>
                 </li>
                 <li class="nav-item">
-                    <p th:text="${session.cart.getCartItems().size()}"></p>
+                    <p th:if="${session.cartItemsQuantity} != null" th:text="${session.cartItemsQuantity}"></p>
+                    <p th:if="${session.cart.getTotalPrice()} != null" th:text="${session.cart.getTotalPrice()}"></p>
                 </li>
             </ul>
         </div>
